--- a/de.ts.ticketsystem.client/pom.xml
+++ b/de.ts.ticketsystem.client/pom.xml
@@ -18,6 +18,16 @@
 			<artifactId>gson</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.10.19</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
